--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </div>
         <!-- Card: Soma por tipos -->
         <div class="card" id="cardSomaTipos">
-          <div class="muted">Soma por tipo</div>
+          <div class="muted">Gastos por tipo</div>
           <select id="filtroDespesa" style="width:100%;margin-bottom:6px"></select>
           <div class="row-inline">
             <label for="chk6meses">Somar últimos 6 meses</label>
