--- a/index.html
+++ b/index.html
@@ -557,6 +557,7 @@
   renderTabs();
   applyTheme();
   renderAll();
+  function renderAll(){ renderPeriods(); renderRenda(); renderTipos(); renderDesp(); renderCC(); renderDashboard(); }
   </script>
   <script>
   if ("serviceWorker" in navigator) {
@@ -566,3 +567,4 @@
   </script>
 </body>
 </html>
+
