--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     :root {
       --bg: #3f3f3f;
-      --card: #5c5c5c;
+      --card: #444444;
       --muted: #1f2937;
       --text: #e5e7eb;
       --text-dim: #9ca3af;
@@ -41,7 +41,7 @@
     header {
       position: sticky;
       top: 0;
-      background: rgba(56, 56, 56, 0.8);
+      background: rgba(58, 58, 58, 0.8);
       backdrop-filter: saturate(180%) blur(8px);
       border-bottom: 1px solid var(--muted);
       z-index: 10;
@@ -74,12 +74,12 @@
       border: 1px solid var(--muted);
       border-radius: var(--radius);
       padding: 16px;
-      box-shadow: 0 6px 30px rgba(255, 255, 255, 0.25);
+      box-shadow: 0 6px 30px rgba(0,0,0,.25);
     }
     .card h2 { margin: 0 0 12px; font-size: 18px }
     .muted { color: var(--text-dim) }
     .kpi { font-size: 26px; font-weight: 800 }
-    .row-inline { display: flex; gap: 10px; align-items: center; }
+    .row-inline { display: flex; gap: 10px; align-items: center; flex-wrap: wrap }
     label { font-size: 12px; color: var(--text-dim) }
     input,select {
       width: 100%; padding: 10px 12px; background: var(--bg);
@@ -168,17 +168,17 @@
           <div class="kpi" id="kpiSobra">R$ 0,00</div>
           <div class="note">Saldo após todas as despesas</div>
         </div>
-        <!-- Card: Soma por tipos -->
+        <!-- Card: Soma por tipos 
         <div class="card" id="cardSomaTipos">
-          <div class="muted">Gastos por tipo</div>
+          <div class="muted">Soma por tipo</div>
           <select id="filtroDespesa" style="width:100%;margin-bottom:6px"></select>
           <div class="row-inline">
-            <label for="chk6meses">Somar últimos 6 meses</label>
             <input type="checkbox" id="chk6meses">
+            <label for="chk6meses">Somar últimos 6 meses</label>
           </div>
           <div class="kpi" id="kpiSomaTipo">R$ 0,00</div>
           <div class="note">Baseado no filtro</div>
-        </div>
+        </div> -->
       </div>
     </section>
 
@@ -458,16 +458,16 @@
     const saldo=totalR;
     document.getElementById('kpiSaldo').textContent=fmtBRL(saldo);
     document.getElementById('kpiSobra').textContent=fmtBRL(saldo-totalD-totalC);
-
+/*
     const eventos=[...despesas.map(d=>({data:d.data,nome:d.nome})),...cartoes.map(c=>({data:c.venc,nome:c.nome}))];
     const futuros=eventos.filter(e=>new Date(e.data)>=today());
     futuros.sort((a,b)=>new Date(a.data)-new Date(b.data));
     document.getElementById('kpiVencimento').textContent=futuros.length? new Date(futuros[0].data).toLocaleDateString()+" - "+futuros[0].nome:"—";
 
-    renderSomaTipo();
+    renderSomaTipo(); */
   }
 
-  // ======= Dashboard: Soma por tipos =======
+  /* ======= Dashboard: Soma por tipos =======
   function renderSomaTipo(){
     const filtro = document.getElementById("filtroDespesa").value;
     const ult6 = document.getElementById("chk6meses").checked;
@@ -484,6 +484,7 @@
       despesas = state.periodos[currentPeriod].despesas;
     }
 
+    // Tipos únicos só dos registros existentes
     const tiposUsados = [...new Set(despesas.map(d=>d.tipo))];
     const sel=document.getElementById("filtroDespesa");
     sel.innerHTML='<option value="">Todos</option>';
@@ -500,7 +501,7 @@
   }
   document.getElementById("filtroDespesa").onchange=renderSomaTipo;
   document.getElementById("chk6meses").onchange=renderSomaTipo;
-
+*/
   // ======= Config Dados =======
   document.getElementById('btnReset').onclick=()=>{ if(confirm("Apagar todos os dados?")){localStorage.removeItem('fin-state'); location.reload();} };
 
@@ -532,32 +533,11 @@
   }
   themeToggle.onchange=()=>{localStorage.setItem('theme', themeToggle.checked?'dark':'light'); applyTheme();};
 
-  // ======= LÓGICA FREE VS PREMIUM =======
-  (function(){
-    const plano = "premium"; // altere para "premium" quando necessário
-    const select = (sel) => document.querySelector(sel);
-    const remove = (sel) => { const el=select(sel); if(el) el.remove(); };
-
-    if(plano === "free"){
-      remove("#cardSomaTipos");
-      remove("#periodSelect");
-      remove("#novoTipo");
-      remove("#btnAddTipo");
-      remove("#boxRendaRec");
-      remove("#boxDespRec");
-
-      const tabBtn = Array.from(document.querySelectorAll("nav button"))
-        .find(btn => btn.textContent.includes("Cartões"));
-      if(tabBtn) tabBtn.remove();
-      remove("#tab-cartoes");
-    }
-  })();
-
   // ======= RENDER ALL =======
-  renderTabs();
-  applyTheme();
-  renderAll();
-  function renderAll(){ renderPeriods(); renderRenda(); renderTipos(); renderDesp(); renderCC(); renderDashboard(); }
+  function renderAll(){ renderPeriods(); renderRenda(); renderDesp(); renderCC(); renderDashboard(); renderTipos(); }
+
+  // init
+  renderTabs(); applyTheme(); renderAll();
   </script>
   <script>
   if ("serviceWorker" in navigator) {
@@ -567,4 +547,3 @@
   </script>
 </body>
 </html>
-
