--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     .card h2 { margin: 0 0 12px; font-size: 18px }
     .muted { color: var(--text-dim) }
     .kpi { font-size: 26px; font-weight: 800 }
-    .row-inline { display: flex; gap: 10px; align-items: center; flex-wrap: wrap }
+    .row-inline { display: flex; align-items: center; gap: 6px; flex-wrap: wrap }
     label { font-size: 12px; color: var(--text-dim) }
     input,select {
       width: 100%; padding: 10px 12px; background: var(--bg);
@@ -141,7 +141,6 @@
             <span id="themeIcon">🌞</span>
             <input type="checkbox" id="themeToggle">
             <span class="slider"></span>
-            <span></span>
           </label>
         </div>
       </div>
@@ -288,7 +287,7 @@
       </div>
     </section>
 
-    <!-- Config Dados -->
+    <!-- CONFIG -->
     <section id="tab-relatorios" class="tab card" hidden>
       <h2>📅 Config Dados</h2>
       <div id="listaReservas"></div>
@@ -299,7 +298,7 @@
     </section>
   </main>
   <script>
-  // ======= FUNÇÕES GERAIS =======
+  // ======= Helpers =======
   const fmtBRL = (n) => (n||0).toLocaleString('pt-BR',{style:'currency',currency:'BRL'});
   const parseN = (v) => Number(String(v).replace(',','.'))||0;
   const today = () => new Date();
@@ -308,16 +307,21 @@
     return date.getFullYear()+"-"+String(date.getMonth()+1).padStart(2,'0');
   };
 
+  // Corrige problema de datas (fuso local)
+  function parseLocalDate(inputDate){
+    const [y,m,d] = inputDate.split("-").map(Number);
+    const now = new Date();
+    return new Date(y, m-1, d, now.getHours(), now.getMinutes(), now.getSeconds());
+  }
+
+  // ======= Estado =======
   let state = JSON.parse(localStorage.getItem('fin-state')||'{}');
   if(!state.periodos) state={periodos:{},tipos:["Moradia","Transporte","Alimentação","Saúde","Serviços","Educação","Outros"]};
   let currentPeriod;
-
-  function ensurePeriod(p){
-    if(!state.periodos[p]) state.periodos[p]={rendas:[],despesas:[],cartoes:[]};
-  }
+  function ensurePeriod(p){ if(!state.periodos[p]) state.periodos[p]={rendas:[],despesas:[],cartoes:[]}; }
   function save(){ localStorage.setItem('fin-state',JSON.stringify(state)); renderAll(); }
 
-  // ======= PERIODOS =======
+  // ======= Periodos =======
   function renderPeriods(){
     const sel=document.getElementById('periodSelect'); sel.innerHTML="";
     const ps=Object.keys(state.periodos).sort();
@@ -331,7 +335,7 @@
     sel.onchange=()=>{currentPeriod=sel.value; renderAll();};
   }
 
-  // ======= RENDAS =======
+  // ======= Rendas =======
   document.getElementById('btnAddRenda').onclick=()=>{
     const nome=document.getElementById('rendaNome').value.trim();
     const valor=parseN(document.getElementById('rendaValor').value);
@@ -339,20 +343,20 @@
     const meses=parseInt(document.getElementById('rendaRecorrente').value);
     if(!nome||!valor||!data){alert("Preencha os campos");return;}
 
-    const p=getPeriod(data);
+    const d=parseLocalDate(data);
+    const p=getPeriod(d);
     ensurePeriod(p);
-    state.periodos[p].rendas.push({id:Date.now(),nome,valor,data,recorrente:meses>0});
+    state.periodos[p].rendas.push({id:Date.now(),nome,valor,data:d.toISOString(),recorrente:meses>0});
     currentPeriod=p;
 
     if(meses>0){
       for(let i=1;i<meses;i++){
-        let d=new Date(data); d.setMonth(d.getMonth()+i);
-        const pi=getPeriod(d);
+        let d2=new Date(d); d2.setMonth(d2.getMonth()+i);
+        const pi=getPeriod(d2);
         ensurePeriod(pi);
-        state.periodos[pi].rendas.push({id:Date.now()+i,nome,valor,data:d.toISOString(),recorrente:true});
+        state.periodos[pi].rendas.push({id:Date.now()+i,nome,valor,data:d2.toISOString(),recorrente:true});
       }
     }
-
     document.getElementById('rendaNome').value="";
     document.getElementById('rendaValor').value="";
     document.getElementById('rendaData').value="";
@@ -370,7 +374,7 @@
     });
   }
 
-  // ======= TIPOS DESPESAS =======
+  // ======= Tipos =======
   function renderTipos(){
     const sel=document.getElementById('despTipo'); sel.innerHTML="";
     state.tipos.forEach(t=>{const o=document.createElement('option'); o.textContent=t; sel.appendChild(o);});
@@ -380,7 +384,7 @@
     if(v){state.tipos.push(v); document.getElementById('novoTipo').value=""; save();}
   };
 
-  // ======= DESPESAS =======
+  // ======= Despesas =======
   document.getElementById('btnAddDesp').onclick=()=>{
     const nome=document.getElementById('despNome').value.trim();
     const valor=parseN(document.getElementById('despValor').value);
@@ -389,20 +393,20 @@
     const meses=parseInt(document.getElementById('despRecorrente').value);
     if(!nome||!valor||!data){alert("Preencha os campos");return;}
 
-    const p=getPeriod(data);
+    const d=parseLocalDate(data);
+    const p=getPeriod(d);
     ensurePeriod(p);
-    state.periodos[p].despesas.push({id:Date.now(),nome,valor,data,tipo,recorrente:meses>0});
+    state.periodos[p].despesas.push({id:Date.now(),nome,valor,data:d.toISOString(),tipo,recorrente:meses>0});
     currentPeriod=p;
 
     if(meses>0){
       for(let i=1;i<meses;i++){
-        let d=new Date(data); d.setMonth(d.getMonth()+i);
-        const pi=getPeriod(d);
+        let d2=new Date(d); d2.setMonth(d2.getMonth()+i);
+        const pi=getPeriod(d2);
         ensurePeriod(pi);
-        state.periodos[pi].despesas.push({id:Date.now()+i,nome,valor,data:d.toISOString(),tipo,recorrente:true});
+        state.periodos[pi].despesas.push({id:Date.now()+i,nome,valor,data:d2.toISOString(),tipo,recorrente:true});
       }
     }
-
     document.getElementById('despNome').value="";
     document.getElementById('despValor').value="";
     document.getElementById('despData').value="";
@@ -420,16 +424,19 @@
     });
   }
 
-  // ======= CARTÕES =======
+  // ======= Cartões =======
   document.getElementById('btnAddCC').onclick=()=>{
     const nome=document.getElementById('ccNome').value.trim();
     const valor=parseN(document.getElementById('ccValor').value);
     const venc=document.getElementById('ccVenc').value;
     if(!nome||!valor||!venc){alert("Preencha os campos");return;}
-    const p=getPeriod(venc);
+
+    const d=parseLocalDate(venc);
+    const p=getPeriod(d);
     ensurePeriod(p);
-    state.periodos[p].cartoes.push({id:Date.now(),nome,valor,venc});
+    state.periodos[p].cartoes.push({id:Date.now(),nome,valor,venc:d.toISOString()});
     currentPeriod=p;
+
     document.getElementById('ccNome').value="";
     document.getElementById('ccValor').value="";
     document.getElementById('ccVenc').value="";
@@ -446,7 +453,7 @@
     });
   }
 
-  // ======= DASHBOARD =======
+  // ======= Dashboard =======
   function renderDashboard(){
     ensurePeriod(currentPeriod);
     const rendas=state.periodos[currentPeriod].rendas||[];
@@ -458,7 +465,7 @@
     const saldo=totalR;
     document.getElementById('kpiSaldo').textContent=fmtBRL(saldo);
     document.getElementById('kpiSobra').textContent=fmtBRL(saldo-totalD-totalC);
-/*
+    /*
     const eventos=[...despesas.map(d=>({data:d.data,nome:d.nome})),...cartoes.map(c=>({data:c.venc,nome:c.nome}))];
     const futuros=eventos.filter(e=>new Date(e.data)>=today());
     futuros.sort((a,b)=>new Date(a.data)-new Date(b.data));
@@ -467,7 +474,7 @@
     renderSomaTipo(); */
   }
 
-  /* ======= Dashboard: Soma por tipos =======
+  /* ======= Dashboard: soma por tipo =======
   function renderSomaTipo(){
     const filtro = document.getElementById("filtroDespesa").value;
     const ult6 = document.getElementById("chk6meses").checked;
@@ -484,7 +491,6 @@
       despesas = state.periodos[currentPeriod].despesas;
     }
 
-    // Tipos únicos só dos registros existentes
     const tiposUsados = [...new Set(despesas.map(d=>d.tipo))];
     const sel=document.getElementById("filtroDespesa");
     sel.innerHTML='<option value="">Todos</option>';
@@ -500,12 +506,12 @@
     document.getElementById("kpiSomaTipo").textContent = fmtBRL(total);
   }
   document.getElementById("filtroDespesa").onchange=renderSomaTipo;
-  document.getElementById("chk6meses").onchange=renderSomaTipo;
-*/
-  // ======= Config Dados =======
+  document.getElementById("chk6meses").onchange=renderSomaTipo; */
+
+  // ======= Config =======
   document.getElementById('btnReset').onclick=()=>{ if(confirm("Apagar todos os dados?")){localStorage.removeItem('fin-state'); location.reload();} };
 
-  // ======= TABS =======
+  // ======= Tabs =======
   const tabNames=[["dashboard","Dashboard"],["renda","Renda"],["despesas","Despesas"],["cartoes","Cartões"],["relatorios","Config Dados"]];
   function renderTabs(){
     const nav=document.getElementById('tabs'); nav.innerHTML="";
@@ -517,7 +523,7 @@
     document.getElementById('tab-dashboard').hidden=false;
   }
 
-  // ======= TEMA (claro/escuro) =======
+  // ======= Tema =======
   const themeToggle=document.getElementById('themeToggle');
   const themeIcon=document.getElementById('themeIcon');
   function applyTheme(){
@@ -533,7 +539,7 @@
   }
   themeToggle.onchange=()=>{localStorage.setItem('theme', themeToggle.checked?'dark':'light'); applyTheme();};
 
-  // ======= RENDER ALL =======
+  // ======= Render All =======
   function renderAll(){ renderPeriods(); renderRenda(); renderDesp(); renderCC(); renderDashboard(); renderTipos(); }
 
   // init
