--- a/index.html
+++ b/index.html
@@ -158,26 +158,19 @@
           <div class="note">Entradas</div>
         </div>
         <div class="card">
-          <div class="muted">Próximo vencimento</div>
-          <div class="kpi" id="kpiVencimento">—</div>
-          <div class="note">Despesas e cartões mais próximos</div>
+          <div class="muted">Total de Despesas</div>
+          <div class="kpi" id="kpisomadiv">—</div>
+          <div class="note">Soma de todas as despesas + cartões</div>
         </div>
         <div class="card">
           <div class="muted">Sobra</div>
           <div class="kpi" id="kpiSobra">R$ 0,00</div>
           <div class="note">Saldo após todas as despesas</div>
         </div>
-        <!-- Card: Soma por tipos 
-        <div class="card" id="cardSomaTipos">
-          <div class="muted">Soma por tipo</div>
-          <select id="filtroDespesa" style="width:100%;margin-bottom:6px"></select>
-          <div class="row-inline">
-            <input type="checkbox" id="chk6meses">
-            <label for="chk6meses">Somar últimos 6 meses</label>
-          </div>
-          <div class="kpi" id="kpiSomaTipo">R$ 0,00</div>
-          <div class="note">Baseado no filtro</div>
-        </div> -->
+        <div class="card">
+          <div class="kpi" id="kpiVencimento">—</div>
+          <div class="note">Despesas e cartões a vencer</div>
+        </div>
       </div>
     </section>
 
@@ -289,7 +282,7 @@
 
     <!-- CONFIG -->
     <section id="tab-relatorios" class="tab card" hidden>
-      <h2>📅 Config Dados</h2>
+      <h2>⚙️ Configuração</h2>
       <div id="listaReservas"></div>
       <div class="space-top">
         <button id="btnReset" class="btn danger">Limpar dados</button>
@@ -465,59 +458,49 @@
     const saldo=totalR;
     document.getElementById('kpiSaldo').textContent=fmtBRL(saldo);
     document.getElementById('kpiSobra').textContent=fmtBRL(saldo-totalD-totalC);
-    /*
+  
+
+    // Corrigido: mostra próximo vencimento e total despesas
     const eventos=[...despesas.map(d=>({data:d.data,nome:d.nome})),...cartoes.map(c=>({data:c.venc,nome:c.nome}))];
     const futuros=eventos.filter(e=>new Date(e.data)>=today());
     futuros.sort((a,b)=>new Date(a.data)-new Date(b.data));
-    document.getElementById('kpiVencimento').textContent=futuros.length? new Date(futuros[0].data).toLocaleDateString()+" - "+futuros[0].nome:"—";
 
-    renderSomaTipo(); */
+    const proximo = futuros.length ? new Date(futuros[0].data).toLocaleDateString()+" - "+futuros[0].nome : "—";
+    const somadivt = totalD+totalC
+    const resumo = `Próximo vencimento: ${proximo}`;
+    const totaldiv = `R$ ${somadivt}`;
+    document.getElementById('kpiVencimento').textContent=resumo;
+    document.getElementById('kpisomadiv').textContent=totaldiv;
+
   }
-
-  /* ======= Dashboard: soma por tipo =======
-  function renderSomaTipo(){
-    const filtro = document.getElementById("filtroDespesa").value;
-    const ult6 = document.getElementById("chk6meses").checked;
-
-    let despesas = [];
-    if(ult6){
-      let base=new Date();
-      for(let i=0;i<6;i++){
-        let p=getPeriod(new Date(base.getFullYear(), base.getMonth()-i, 1));
-        if(state.periodos[p]) despesas = despesas.concat(state.periodos[p].despesas);
-      }
-    } else {
-      ensurePeriod(currentPeriod);
-      despesas = state.periodos[currentPeriod].despesas;
-    }
-
-    const tiposUsados = [...new Set(despesas.map(d=>d.tipo))];
-    const sel=document.getElementById("filtroDespesa");
-    sel.innerHTML='<option value="">Todos</option>';
-    tiposUsados.forEach(t=>{
-      const o=document.createElement("option");
-      o.value=t; o.textContent=t;
-      if(t===filtro) o.selected=true;
-      sel.appendChild(o);
-    });
-
-    let filtradas = filtro ? despesas.filter(d=>d.tipo===filtro) : despesas;
-    const total = filtradas.reduce((s,d)=>s+d.valor,0);
-    document.getElementById("kpiSomaTipo").textContent = fmtBRL(total);
-  }
-  document.getElementById("filtroDespesa").onchange=renderSomaTipo;
-  document.getElementById("chk6meses").onchange=renderSomaTipo; */
-
   // ======= Config =======
-  document.getElementById('btnReset').onclick=()=>{ if(confirm("Apagar todos os dados?")){localStorage.removeItem('fin-state'); location.reload();} };
+  document.getElementById('btnReset').onclick=()=>{ 
+    if(confirm("Apagar todos os dados?")){
+      localStorage.removeItem('fin-state'); 
+      location.reload();
+    } 
+  };
 
   // ======= Tabs =======
-  const tabNames=[["dashboard","Dashboard"],["renda","Renda"],["despesas","Despesas"],["cartoes","Cartões"],["relatorios","Config Dados"]];
+  const tabNames=[
+    ["dashboard","Dashboard"],
+    ["renda","Renda"],
+    ["despesas","Despesas"],
+    ["cartoes","Cartões"],
+    ["relatorios","⚙️"]   // ícone no menu
+  ];
   function renderTabs(){
     const nav=document.getElementById('tabs'); nav.innerHTML="";
     tabNames.forEach(([id,label],i)=>{
-      const b=document.createElement('button'); b.textContent=label; if(i==0) b.classList.add('active');
-      b.onclick=()=>{document.querySelectorAll('.tab').forEach(t=>t.hidden=true); document.getElementById('tab-'+id).hidden=false; document.querySelectorAll('nav button').forEach(x=>x.classList.remove('active')); b.classList.add('active');};
+      const b=document.createElement('button'); 
+      b.textContent=label; 
+      if(i==0) b.classList.add('active');
+      b.onclick=()=>{
+        document.querySelectorAll('.tab').forEach(t=>t.hidden=true); 
+        document.getElementById('tab-'+id).hidden=false; 
+        document.querySelectorAll('nav button').forEach(x=>x.classList.remove('active')); 
+        b.classList.add('active');
+      };
       nav.appendChild(b);
     });
     document.getElementById('tab-dashboard').hidden=false;
@@ -540,10 +523,19 @@
   themeToggle.onchange=()=>{localStorage.setItem('theme', themeToggle.checked?'dark':'light'); applyTheme();};
 
   // ======= Render All =======
-  function renderAll(){ renderPeriods(); renderRenda(); renderDesp(); renderCC(); renderDashboard(); renderTipos(); }
+  function renderAll(){ 
+    renderPeriods(); 
+    renderRenda(); 
+    renderDesp(); 
+    renderCC(); 
+    renderDashboard(); 
+    renderTipos(); 
+  }
 
   // init
-  renderTabs(); applyTheme(); renderAll();
+  renderTabs(); 
+  applyTheme(); 
+  renderAll();
   </script>
   <script>
   if ("serviceWorker" in navigator) {
