--- a/index.html
+++ b/index.html
@@ -505,8 +505,7 @@
     <div class="wrap">
       <div class="row" style="align-items:center;justify-content:space-between">
         <div class="grow">
-          <h1>💰 Meu Controle Financeiro</h1>
-          <div class="muted">Controle seus ganhos e despesas por período</div>
+          <h1>💰 Meu Financeiro</h1
         </div>
         <div class="row-inline">
           <select id="periodSelect" class="btn ghost" style="width:auto"></select>
@@ -1098,3 +1097,4 @@
 </body>
 
 </html>
+
