--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="https://cdn.jsdelivr.net/npm/geo-tz@8.1.4/dist/index.js"></script>
   <link rel="stylesheet" href="style.css">
+
+  <!-- Favicon padrão para navegadores -->
+  <link rel="icon" type="image/png" href="/icons/favicon-192.png" sizes="192x192">
+
+  <!-- Ícone para Apple Touch (iOS) -->
+  <link rel="apple-touch-icon" href="/icons/favicon-512.png" sizes="512x512">
+
+  <!-- Ícone para PWA e Android -->
+  <link rel="icon" type="image/png" href="/icons/favicon-512.png" sizes="512x512">
+
+  <!-- Manifesto para PWA -->
+  <link rel="manifest" href="/manifest.json">
+
+  <!-- Meta tags para melhorar a experiência em dispositivos móveis -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
 </head>
 
 <body>
@@ -642,4 +659,5 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 
