--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
   <link rel="stylesheet" href="style.css">
 
   <!-- Favicon padrão para navegadores -->
-  <link rel="icon" type="image/png" href="/icons/favicon-192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="/icons/icon-192.png" sizes="192x192">
 
   <!-- Ícone para Apple Touch (iOS) -->
-  <link rel="apple-touch-icon" href="/icons/favicon-512.png" sizes="512x512">
+  <link rel="apple-touch-icon" href="/icons/icon-512.png" sizes="512x512">
 
   <!-- Ícone para PWA e Android -->
-  <link rel="icon" type="image/png" href="/icons/favicon-512.png" sizes="512x512">
-
-  <!-- Manifesto para PWA -->
-  <link rel="manifest" href="/manifest.json">
+  <link rel="icon" type="image/png" href="/icons/icon-512.png" sizes="512x512">
 
   <!-- Meta tags para melhorar a experiência em dispositivos móveis -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -659,5 +656,6 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 
 
