--- a/index.html
+++ b/index.html
@@ -175,26 +175,6 @@
           <p class="text-small text-muted">Fique de olho nas datas importantes</p>
         </div>
       </div>
-
-      <!-- Quick Actions -->
-      <div class="quick-actions">
-        <div class="quick-action" data-tab="renda" onclick="navigateToTab('renda')">
-          <i class="fas fa-plus-circle"></i>
-          <div class="quick-action-label">Adicionar Renda</div>
-        </div>
-        <div class="quick-action" data-tab="despesas" onclick="navigateToTab('despesas')">
-          <i class="fas fa-minus-circle"></i>
-          <div class="quick-action-label">Nova Despesa</div>
-        </div>
-        <div class="quick-action" data-tab="cartoes" onclick="navigateToTab('cartoes')">
-          <i class="fas fa-credit-card"></i>
-          <div class="quick-action-label">Gasto no Cartão</div>
-        </div>
-        <div class="quick-action" data-tab="metas" onclick="navigateToTab('metas')">
-          <i class="fas fa-bullseye"></i>
-          <div class="quick-action-label">Nova Meta</div>
-        </div>
-      </div>
     </section>
 
     <!-- RENDA -->
@@ -651,11 +631,15 @@
           Isso apagará todos os dados salvos no seu dispositivo
         </p>
       </div>
+      <div class="card space-top">
+        <h3><i class="fa-solid fa-registered-alt"></i>Criado por Matheus Oliveira| 2025</h3>
+      </div>
     </section>
   </main>
   <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
