--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <div class="form-group">
             <label>
               Descrição
-              <button class="help-trigger" type="button">
+              <button class="help-trigger" type="button" tabindex="-1">
                 <i class="fas fa-question-circle"></i>
               </button>
             </label>
@@ -201,7 +201,7 @@
           <div class="form-group">
             <label>
               Valor
-              <button class="help-trigger" type="button">
+              <button class="help-trigger" type="button" tabindex="-1">
                 <i class="fas fa-question-circle"></i>
               </button>
             </label>
@@ -217,7 +217,7 @@
           <div class="form-group">
             <label>
               Data de Recebimento
-              <button class="help-trigger" type="button">
+              <button class="help-trigger" type="button" tabindex="-1">
                 <i class="fas fa-question-circle"></i>
               </button>
             </label>
@@ -233,7 +233,7 @@
           <div class="form-group">
             <label>
               Recorrência
-              <button class="help-trigger" type="button">
+              <button class="help-trigger" type="button" tabindex="-1">
                 <i class="fas fa-question-circle"></i>
               </button>
             </label>
@@ -639,6 +639,7 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
