--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
           <div class="form-group">
             <label>
               Descrição
-              <button class="help-trigger" type="button">
+              <button class="help-trigger" type="button" tabindex="-1">
                 <i class="fas fa-question-circle"></i>
               </button>
             </label>
@@ -308,7 +308,7 @@
           <div class="form-group">
             <label>
               Valor
-              <button class="help-trigger" type="button">
+              <button class="help-trigger" type="button" tabindex="-1">
                 <i class="fas fa-question-circle"></i>
               </button>
             </label>
@@ -324,7 +324,7 @@
           <div class="form-group">
             <label>
               Vencimento
-              <button class="help-trigger" type="button">
+              <button class="help-trigger" type="button" tabindex="-1">
                 <i class="fas fa-question-circle"></i>
               </button>
             </label>
@@ -340,7 +340,7 @@
           <div class="form-group">
             <label>
               Categoria
-              <button class="help-trigger" type="button">
+              <button class="help-trigger" type="button" tabindex="-1"> 
                 <i class="fas fa-question-circle"></i>
               </button>
             </label>
@@ -356,7 +356,7 @@
           <div class="form-group">
             <label>
               Nova Categoria
-              <button class="help-trigger" type="button">
+              <button class="help-trigger" type="button" tabindex="-1">
                 <i class="fas fa-question-circle"></i>
               </button>
             </label>
@@ -377,7 +377,7 @@
           <div class="form-group">
             <label>
               Recorrência
-              <button class="help-trigger" type="button">
+              <button class="help-trigger" type="button" tabindex="-1">
                 <i class="fas fa-question-circle"></i>
               </button>
             </label>
@@ -437,7 +437,7 @@
           <div class="form-group">
             <label>
               Nome do Cartão
-              <button class="help-trigger" type="button">
+              <button class="help-trigger" type="button" tabindex="-1">
                 <i class="fas fa-question-circle"></i>
               </button>
             </label>
@@ -453,7 +453,7 @@
           <div class="form-group">
             <label>
               Vencimento
-              <button class="help-trigger" type="button">
+              <button class="help-trigger" type="button" tabindex="-1">
                 <i class="fas fa-question-circle"></i>
               </button>
             </label>
@@ -469,7 +469,7 @@
           <div class="form-group">
             <label>
               Valor Gasto
-              <button class="help-trigger" type="button">
+              <button class="help-trigger" type="button" tabindex="-1">
                 <i class="fas fa-question-circle"></i>
               </button>
             </label>
@@ -522,7 +522,7 @@
           <div class="form-group">
             <label>
               Objetivo
-              <button class="help-trigger" type="button">
+              <button class="help-trigger" type="button" tabindex="-1">
                 <i class="fas fa-question-circle"></i>
               </button>
             </label>
@@ -538,7 +538,7 @@
           <div class="form-group">
             <label>
               Valor Alvo
-              <button class="help-trigger" type="button">
+              <button class="help-trigger" type="button" tabindex="-1">
                 <i class="fas fa-question-circle"></i>
               </button>
             </label>
@@ -639,6 +639,7 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
